--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,19 @@
     <groupId>se.espressoshock</groupId>
     <artifactId>sa-performance-evaluator</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.5.1</version>
+                <configuration>
+                    <source>1.14</source>
+                    <target>1.14</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 <dependencies>
     <dependency>
