--- a/pom.xml
+++ b/pom.xml
@@ -32,5 +32,11 @@
         <artifactId>hibernate-core</artifactId>
         <version>5.4.10.Final</version>
     </dependency>
+    <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter</artifactId>
+        <version>5.4.2</version>
+        <scope>test</scope>
+    </dependency>
 </dependencies>
 </project>
